--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,9 +6,8 @@
 name: Publish tach
 
 on:
-  push:
-    branches:
-      - internal/alpha
+  release:
+    types: [published]
 
 permissions:
   contents: read
@@ -140,6 +139,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-22.04
+    if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
