just single addition error

--- a/tach.toml
+++ b/tach.toml
@@ -40,7 +40,7 @@ depends_on = [
 path = "tach.cli"
 depends_on = [
     { path = "tach" },
-#    { path = "tach.cache" },
+    { path = "tach.cache" },
     { path = "tach.check_external" },
     { path = "tach.extension" },
     { path = "tach.filesystem" },
