--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist -i python3.7 python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.7 pypy3.8 pypy3.9 pypy3.10
           sccache: "true"
           manylinux: auto
       - name: Upload wheels
