--- a/tach.toml
+++ b/tach.toml
@@ -183,7 +183,7 @@ expose = [
 from = [
     "tach.modularity",
 ]
-
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -192,6 +192,7 @@ expose = [
 from = [
     "tach",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -200,6 +201,7 @@ expose = [
 from = [
     "tach.cli",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -208,6 +210,7 @@ expose = [
 from = [
     "tach.colors",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -221,6 +224,7 @@ expose = [
 from = [
     "tach.constants",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -230,6 +234,7 @@ expose = [
 from = [
     "tach.filesystem.git_ops",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -238,6 +243,7 @@ expose = [
 from = [
     "tach.hooks",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -247,6 +253,7 @@ expose = [
 from = [
     "tach.interactive",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -256,6 +263,7 @@ expose = [
 from = [
     "tach.logging",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -264,6 +272,7 @@ expose = [
 from = [
     "tach.mod",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -274,6 +283,7 @@ expose = [
 from = [
     "tach.parsing",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -283,6 +293,7 @@ expose = [
 from = [
     "tach.report",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -293,6 +304,7 @@ expose = [
 from = [
     "tach.show",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -301,6 +313,7 @@ expose = [
 from = [
     "tach.start",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -309,6 +322,7 @@ expose = [
 from = [
     "tach.sync",
 ]
+serializable = true
 
 [[interfaces]]
 expose = [
@@ -317,6 +331,7 @@ expose = [
 from = [
     "tach.test",
 ]
+serializable = true
 
 [cache]
 file_dependencies = [
