Add run_in_thread API, placeholder for tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tempfile = "3.14.0"
 lsp-server = "0.7.7"
 lsp-types = "0.97.0"
 crossbeam-channel = "0.5.14"
+ctrlc = "3.4.5"
 
 [features]
 extension-module = ["pyo3/extension-module"]
