--- a/tach.toml
+++ b/tach.toml
@@ -12,6 +12,7 @@ source_roots = [
 exact = true
 forbid_circular_dependencies = true
 use_regex_matching = false
+disable_logging = true
 
 [[modules]]
 path = "tach"
