--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ lsp-types = "0.97.0"
 crossbeam-channel = "0.5.14"
 ctrlc = "3.4.5"
 rayon = "1.10.0"
+parking_lot = "0.12.3"
 
 [features]
 extension-module = ["pyo3/extension-module"]
