--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ crossbeam-channel = "0.5.14"
 ctrlc = "3.4.5"
 rayon = "1.10.0"
 parking_lot = "0.12.3"
+itertools = "0.14.0"
 
 [features]
 extension-module = ["pyo3/extension-module"]
