--- a/tach.toml
+++ b/tach.toml
@@ -39,28 +39,13 @@ layer = "core"
 
 [[modules]]
 path = "tach.check_external"
-depends_on = [
-    "tach.extension",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
 path = "tach.cli"
 depends_on = [
     "tach",
-    "tach.cache",
-    "tach.check_external",
-    "tach.extension",
-    "tach.filesystem",
-    "tach.icons",
-    "tach.logging",
-    "tach.mod",
-    "tach.modularity",
-    "tach.parsing",
-    "tach.report",
-    "tach.show",
-    "tach.sync",
-    "tach.test",
 ]
 layer = "ui"
 
@@ -126,21 +111,12 @@ layer = "core"
 
 [[modules]]
 path = "tach.mod"
-depends_on = [
-    "tach.filesystem",
-    "tach.interactive",
-    "tach.parsing",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
 path = "tach.modularity"
-depends_on = [
-    "tach.extension",
-    "tach.filesystem",
-    "tach.filesystem.git_ops",
-    "tach.parsing",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
@@ -163,18 +139,12 @@ layer = "core"
 
 [[modules]]
 path = "tach.report"
-depends_on = [
-    "tach.extension",
-    "tach.filesystem",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
 path = "tach.show"
-depends_on = [
-    "tach.extension",
-    "tach.filesystem",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
@@ -186,10 +156,7 @@ layer = "ui"
 
 [[modules]]
 path = "tach.sync"
-depends_on = [
-    "tach.extension",
-    "tach.filesystem",
-]
+depends_on = []
 layer = "commands"
 
 [[modules]]
