Make glob excludes the default option, print warning when regex enabled, clean up error when invalid regex

--- a/python/tests/example/valid/tach.toml
+++ b/python/tests/example/valid/tach.toml
@@ -1,9 +1,10 @@
 exclude = [
-    'tests',
-    'docs',
-    '.*__pycache__',
-    '.*egg-info',
-    'domain_four',
+    '**/tests',
+    '**/docs',
+    '**/*__pycache__',
+    '**/*egg-info',
+    '**/venv',
+    'domain_four.py',
 ]
 
 exact = true
