--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ctrlc = "3.4.5"
 rayon = "1.10.0"
 parking_lot = "0.12.3"
 itertools = "0.14.0"
+toml_edit = "0.22.22"
 
 [features]
 extension-module = ["pyo3/extension-module"]
