--- a/tach.toml
+++ b/tach.toml
@@ -97,16 +97,6 @@ depends_on = [
 layer = "core"
 
 [[modules]]
-path = "tach.mod"
-depends_on = []
-layer = "commands"
-
-[[modules]]
-path = "tach.modularity"
-depends_on = []
-layer = "commands"
-
-[[modules]]
 path = "tach.parsing"
 depends_on = [
     "tach.extension",
@@ -125,16 +115,6 @@ depends_on = [
 layer = "core"
 
 [[modules]]
-path = "tach.report"
-depends_on = []
-layer = "commands"
-
-[[modules]]
-path = "tach.show"
-depends_on = []
-layer = "commands"
-
-[[modules]]
 path = "tach.start"
 depends_on = [
     "tach.cli",
@@ -142,12 +122,7 @@ depends_on = [
 layer = "ui"
 
 [[modules]]
-path = "tach.sync"
-depends_on = []
-layer = "commands"
-
-[[modules]]
-path = "tach.test"
+paths = ["tach.test", "tach.sync", "tach.report", "tach.show", "tach.modularity", "tach.mod"]
 depends_on = []
 layer = "commands"
 
