--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,16 @@ pyo3 = { version = "0.22.5", features = ["abi3-py37"] }
 regex = "1.11.1"
 once_cell = "1.20.2"
 walkdir = "2.5.0"
-ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
-ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
-ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.5" }
+ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
+ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
+ruff_linter = { git = "https://github.com/astral-sh/ruff.git", tag = "0.9.3" }
 cached = { version = "0.54.0", features = ["disk_store"] }
 globset = "0.4.15"
 toml = "0.8.19"
 thiserror = "2.0.7"
 serde = { version = "1.0.216", features = ["derive"] }
 glob = "0.3.2"
-petgraph = "0.7.0"
+petgraph = "0.7.1"
 serde_json = "1.0.134"
 tempfile = "3.15.0"
 lsp-server = "0.7.7"
@@ -33,6 +33,7 @@ rayon = "1.10.0"
 parking_lot = "0.12.3"
 itertools = "0.14.0"
 toml_edit = "0.22.22"
+console = "0.15.10"
 
 [features]
 extension-module = ["pyo3/extension-module"]
