--- a/tach.toml
+++ b/tach.toml
@@ -285,3 +285,6 @@ exclude = [
 [rules]
 unused_ignore_directives = "error"
 require_ignore_directive_reasons = "error"
+
+[plugins.django]
+settings_module = "django.conf.settings"
