Implement 'tach init' command to walk through mod/sync/show initial flow

--- a/tach.toml
+++ b/tach.toml
@@ -29,6 +29,11 @@ depends_on = [
 layer = "ui"
 
 [[modules]]
+path = "tach.init"
+depends_on = ["tach.show", "tach.mod"]
+layer = "commands"
+
+[[modules]]
 path = "tach.cache"
 depends_on = [
     "tach",
