--- a/tach.toml
+++ b/tach.toml
@@ -34,6 +34,11 @@ depends_on = ["tach.show", "tach.mod"]
 layer = "commands"
 
 [[modules]]
+path = "tach.console"
+depends_on = []
+utility = true
+
+[[modules]]
 path = "tach.cache"
 depends_on = [
     "tach",
