updated init, show

--- a/tach.toml
+++ b/tach.toml
@@ -122,8 +122,13 @@ depends_on = [
 layer = "ui"
 
 [[modules]]
-paths = ["tach.test", "tach.report", "tach.show", "tach.modularity", "tach.mod"]
+paths = ["tach.test", "tach.report", "tach.modularity", "tach.mod"]
 depends_on = []
+layer = "commands"
+
+[[modules]] 
+path = "tach.show"
+depends_on = ["tach.modularity"]
 layer = "commands"
 
 [[modules]]
@@ -136,6 +141,10 @@ utility = true
 expose = [
     "export_report",
     "upload_report_to_gauge",
+    "Module",
+    "Usage",
+    "UsageError",
+    "build_.*",
 ]
 from = [
     "tach.modularity",
@@ -144,6 +153,9 @@ from = [
 [[interfaces]]
 expose = [
     "__version__",
+    "console.console",
+    "console.console_err",
+    "init.init_project",
 ]
 from = [
     "tach",
@@ -237,9 +249,10 @@ from = [
 
 [[interfaces]]
 expose = [
-    "generate_show_url",
+    "upload_show_report",
     "generate_module_graph_dot_file",
     "generate_module_graph_mermaid",
+    "",
 ]
 from = [
     "tach.show",
