Use optional 'original_line_number' on Diagnostic to describe import line separate from alias line

--- a/python/tests/example/many_features/real_src/module3/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module3/tach.domain.toml
@@ -8,6 +8,11 @@ depends_on = []
 layer = "low"
 utility = true
 
+[[modules]]
+path = "submodule2"
+depends_on = []
+layer = "low"
+
 [[interfaces]]
 expose = ["content"]
 from = ["<domain_root>"]
