--- a/python/tests/example/many_features/tach.toml
+++ b/python/tests/example/many_features/tach.toml
@@ -29,6 +29,11 @@ layer = "high"
 path = "outer_module"
 unchecked = true
 
+[[modules]]
+path = "globbed.**"
+depends_on = ["module4"]
+layer = "hightest"
+
 [rules]
 unused_ignore_directives = "error"
 require_ignore_directive_reasons = "warn"
