Update test suite with examples of glob overwriting

--- a/python/tests/example/many_features/real_src/module1/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module1/tach.domain.toml
@@ -3,6 +3,11 @@ depends_on = ["api", "//module5"]
 layer = "mid"
 
 [[modules]]
+path = "*"
+depends_on = []
+layer = "hightest"
+
+[[modules]]
 path = "api"
 depends_on = ["**"]
 layer = "mid"
