--- a/tach.toml
+++ b/tach.toml
@@ -11,9 +11,7 @@ exclude = [
     "docs",
     "tach.egg-info",
 ]
-source_roots = [
-    "python",
-]
+source_roots = ["python"]
 exact = true
 forbid_circular_dependencies = true
 
