Pass project root as argument instead of implicitly searching in cache methods

--- a/tach.toml
+++ b/tach.toml
@@ -43,10 +43,7 @@ utility = true
 
 [[modules]]
 path = "tach.cache"
-depends_on = [
-    "tach",
-    "tach.filesystem",
-]
+depends_on = ["tach"]
 layer = "core"
 
 [[modules]]
