--- a/python/tests/example/monorepo/pyproject.toml
+++ b/python/tests/example/monorepo/pyproject.toml
@@ -1,3 +1,4 @@
+[tool.tach]
 exclude = []
 source_roots = [
     "backend",
@@ -5,31 +6,31 @@ source_roots = [
 ]
 exact = true
 
-[[modules]]
+[[tool.tach.modules]]
 path = "mod1"
 depends_on = []
 
-[[modules]]
+[[tool.tach.modules]]
 path = "mod2"
 depends_on = []
 
-[[modules]]
+[[tool.tach.modules]]
 path = "mod3"
 depends_on = [
     { path = "mod2" },
 ]
 
-[[modules]]
+[[tool.tach.modules]]
 path = "myorg.corepkg"
 depends_on = [
     { path = "myorg.utilpkg" },
 ]
 
-[[modules]]
+[[tool.tach.modules]]
 path = "myorg.utilpkg"
 depends_on = []
 
-[[interfaces]]
+[[tool.tach.interfaces]]
 expose = [
     "x",
 ]
@@ -37,7 +38,7 @@ from = [
     "mod1",
 ]
 
-[[interfaces]]
+[[tool.tach.interfaces]]
 expose = [
     "y",
 ]
