Add monorepo example using uv workspaces (check-external failing right now)

--- a/python/tests/example/monorepo_namespace/pyproject.toml
+++ b/python/tests/example/monorepo_namespace/pyproject.toml
@@ -1,7 +1,6 @@
 [project]
-name = "myorg.monorepo"
+name = "gauge-monorepo"
 version = "0.1.0"
-dependencies = ["gauge-backend", "gauge-utils"]
 
 [tool.tach]
 exclude = []
