Iterate over source roots in check-external, resolve to package roots, detect external imports by matching package, parse external dependencies from package root

--- a/python/tests/example/monorepo_namespace/pyproject.toml
+++ b/python/tests/example/monorepo_namespace/pyproject.toml
@@ -26,9 +26,7 @@ depends_on = [
 
 [[tool.tach.modules]]
 path = "gauge.backend"
-depends_on = [
-    { path = "gauge.utils" },
-]
+depends_on = []
 
 [[tool.tach.modules]]
 path = "gauge.utils"
