Update workspace monorepo test to use globbed source roots

--- a/python/tests/example/monorepo_workspace/pyproject.toml
+++ b/python/tests/example/monorepo_workspace/pyproject.toml
@@ -13,4 +13,4 @@ members = ["packages/*"]
 
 
 [tool.tach]
-source_roots = ["src", "packages/package1/src", "packages/package2/src"]
+source_roots = ["**/src"]
