Forbid internal module imports if they match cannot_depend_on

--- a/tach.toml
+++ b/tach.toml
@@ -25,9 +25,7 @@ depends_on = []
 
 [[modules]]
 path = "tach.__main__"
-depends_on = [
-    "tach.start",
-]
+depends_on = ["tach.start"]
 layer = "ui"
 
 
