--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "GitPython~=3.1",
     "networkx>=2.6,<4.0",
     "pydot>=2,<4",
+    "mcp>=1.3.0; python_version >= '3.10'",
     "stdlib-list>=0.10.0; python_version < '3.10'",
     "importlib_metadata>=6.0; python_version == '3.7'",
 ]
