Adapt 'many_features' example to use exclusive interface; fix behavior

--- a/python/tests/example/many_features/real_src/module1/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module1/tach.domain.toml
@@ -16,12 +16,12 @@ layer = "mid"
 [[interfaces]]
 expose = [".*"]
 from = ["api"]
-visibility = ["<domain_root>"]
 
 [[interfaces]]
 expose = ["MyAPI"]
 from = ["api"]
 visibility = ["//module5"]
+exclusive = true
 
 [[modules]]
 path = "submodule1"
