Tighten test for exclusive interface

--- a/python/tests/example/many_features/real_src/module1/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module1/tach.domain.toml
@@ -14,7 +14,7 @@ visibility = ["<domain_root>", "//module5"]
 layer = "mid"
 
 [[interfaces]]
-expose = [".*"]
+expose = ["something"]
 from = ["api"]
 
 [[interfaces]]
