Use module name instead of distribution name when describing deps at module level

--- a/python/tests/example/many_features/real_src/module1/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module1/tach.domain.toml
@@ -1,6 +1,6 @@
 [root]
 depends_on = ["api", "//module5"]
-depends_on_external = ["gitpython", "pyyaml"]
+depends_on_external = ["git", "yaml"]
 layer = "mid"
 
 [[modules]]
