--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ parking_lot = "0.12.3"
 itertools = "0.14.0"
 toml_edit = "0.22.24"
 console = "0.15.11"
+ignore = "0.4.23"
 dashmap = { version = "6.1.0", features = ["inline"] }
 
 [features]
