Update extend_and_validate given no regex

--- a/tach.toml
+++ b/tach.toml
@@ -223,7 +223,7 @@ from = [
 expose = [
     "parse_project_config",
     "dump_project_config_to_toml",
-    "extend_and_validate",
+    "combine_exclude_paths",
 ]
 from = [
     "tach.parsing",
