Replace UsageError mapping with direct serde serialization of Diagnostics

--- a/tach.toml
+++ b/tach.toml
@@ -145,8 +145,8 @@ expose = [
     "upload_report_to_gauge",
     "Module",
     "Usage",
-    "UsageError",
     "build_.*",
+    "serialize_.*",
 ]
 from = [
     "tach.modularity",
