--- a/python/tests/example/many_features/tach.toml
+++ b/python/tests/example/many_features/tach.toml
@@ -37,6 +37,7 @@ layer = "hightest"
 [rules]
 unused_ignore_directives = "error"
 require_ignore_directive_reasons = "warn"
+local_imports = "off"
 
 [plugins.django]
 settings_module = "django_settings"
