--- a/tach.toml
+++ b/tach.toml
@@ -20,7 +20,7 @@ unused_ignore_directives = "error"
 require_ignore_directive_reasons = "error"
 
 [[modules]]
-path = "**"
+path = "*"
 depends_on = []
 depends_on_external = []
 
