Support --out - for stdout in tach show

--- a/tach.toml
+++ b/tach.toml
@@ -241,8 +241,7 @@ from = [
 [[interfaces]]
 expose = [
     "upload_show_report",
-    "generate_module_graph_dot_file",
-    "generate_module_graph_mermaid",
+    "generate_module_graph_.*"
 ]
 from = [
     "tach.show",
