Add test for closed layers, adjust copy in diagnostic

--- a/python/tests/example/many_features/real_src/module3/tach.domain.toml
+++ b/python/tests/example/many_features/real_src/module3/tach.domain.toml
@@ -18,6 +18,14 @@ path = "submodule3"
 depends_on = []
 layer = "low"
 
+[[modules]]
+path = "submodule3.closed"
+layer = "closed"
+
+[[modules]]
+path = "submodule3.lowest_open"
+layer = "lowest-open"
+
 [[interfaces]]
 expose = ["content"]
 from = ["<domain_root>"]
