--- a/python/tests/example/many_features/tach.toml
+++ b/python/tests/example/many_features/tach.toml
@@ -12,7 +12,9 @@ layers = [
     "mid",
     "low",
     "lowest",
-    "hightest"
+    "hightest",
+    { name = "closed", closed = true },
+    "lowest-open"
 ]
 
 [[modules]]
