--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,6 @@
 mkdocs>=1.5.0
 mkdocs-material>=9.5.0
 pymdown-extensions>=10.0
-mkdocs-social-plugin>=0.1.0 
+mkdocs-social-plugin>=0.1.0
+pillow
+cairosvg
