--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "pyyaml~=6.0",
     "tomli>=1.2.2",
     "tomli-w~=1.0",
-    "rich~=13.0",
+    "rich>=13.0",
     "prompt-toolkit~=3.0",
     "GitPython~=3.1",
     "networkx>=2.6,<4.0",
